more responsive on mobile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital@0;1&family=Raleway:ital,wght@0,200;0,300;0,400;1,400&display=swap" rel="stylesheet">
  
   <title>The Met Mixer</title>
-  
+
 </head>
 <body>
 
@@ -42,7 +42,7 @@
     <div class="main-content">
       <div class="row">
         <div class="main-title col-lg-12">
-          <h2>The Met Mixer is an online platform that generates random artwork, offering a unique and delightful way to explore the vast realm of art. Inmerse yourself in the beauty of diverse masterpieces, spanning different areas, styles and cultures.</h2>
+          <p>The Met Mixer is an online platform that generates random artwork, offering a unique and delightful way to explore the vast realm of art. Inmerse yourself in the beauty of diverse masterpieces, spanning different areas, styles and cultures.</p>
       </div>
       </div>
       </div>
